Refactored the command acquisition for drawing a path. Created an abstract base class to reduce code duplication. Additionally, streamlined the buildTransitionCurvePolyline function in the transition curve generator class.